# sherpa_project

./: actiondesig1.json
agents_model_description/: CMakeLists.txt  agents-model-description.asd  agents-model-description.asd~  agents-models-description.asd  mainpage.dox  manifest.xml  package.xml
agents_model_description/asdf/: agents-model-description.asd  agents-models-description.asd
agents_model_description/config/: human_controller.yaml
agents_model_description/meshes/human/: Body1.dae  Body1.dae.stl  Body2.dae  Body2.dae.stl  Body3.dae  Body3.dae.stl  Body4.dae  Body4.dae.stl  FootLeft.dae  FootLeft.dae.stl  FootRight.dae  FootRight.dae.stl  HandLeft.dae  HandLeft.dae.stl  HandRight.dae  HandRight.dae.stl  Head.dae  Head.dae.stl  Hips.dae  Hips.dae.stl  LowerArmLeft.dae  LowerArmLeft.dae.stl  LowerArmRight.dae  LowerArmRight.dae.stl  LowerLegLeft.dae  LowerLegLeft.dae.stl  LowerLegRight.dae  LowerLegRight.dae.stl  Neck.dae  Neck.dae.stl  ShoulderLeft.dae  ShoulderLeft.dae.stl  ShoulderRight.dae  ShoulderRight.dae.stl  ShoulderRight2.dae.stl  ToeLeft.dae  ToeLeft.dae.stl  ToeRight.dae  ToeRight.dae.stl  UpperArmLeft.dae  (+7 more)
agents_model_description/meshes/quadrotor/: quadrotor.stl
agents_model_description/models/: human.xacro
agents_model_description/owl/: cram_log.owl  pointing.owl
agents_model_description/src/: #agents-knowledge.lisp#  agents-knowledge.lisp  package.lisp  package.lisp~  robots_knowledge.lisp~
agents_model_description/urdf/: human.urdf  quadrotor.urdf
alpine_scenario/: CMakeLists.txt  Makefile  mainpage.dox  package.xml
alpine_scenario/action/: libhuman.action
alpine_scenario/include/: alp_nav_init.h~
alpine_scenario/launch/: alpine1.vcg  alpine_quadcopter.vcg  alpino_mesh.launch  frames.gv  multi_quadrotor.launch  outdoor_flight_gazebo.launch  spawn_quadrotor.launch
alpine_scenario/launch/launch_files/: #multi_quadrotor.launch#  frames.gv  mesh_world.launch  mesh_world.launch~  scenario.launch
alpine_scenario/map/: map.pgm  map.yaml
alpine_scenario/models/: actor_demo.model  bluebotics.dae  human.dae  posedae.dae  rover3.dae
alpine_scenario/robots/: human.urdf  quadrotor.sdf  rover.urdf  tree1-2.urdf  tree1-3.urdf  tree1-4.urdf  tree1-5.urdf  tree1.urdf
alpine_scenario/src/: alp_nav_mesh_marker.cpp  alpine_scenario.lisp  listener.cpp  pTp2.cpp  package.lisp  quadcopter.cpp  simple_trajectory.cpp  talker.cpp  talker_main.cpp  talker_quadrotor2.cpp  talker_rover.cpp  utils.lisp
alpine_scenario/worlds/: alpine.world  mesh.world
bullet_reasoner/: bullet-reasoner.asd  mainpage.dox  manifest.xml
bullet_reasoner/asdf/: bullet-reasoner.asd
bullet_reasoner/src/: default.lisp  package.lisp
cognitive_reasoning/: #cognitive-reasoning.asd#  CMakeLists.txt  cognitive-reasoning.asd  cognitive-reasoning.asd~  mainpage.dox  manifest.xml  package.xml
cognitive_reasoning/asdf/: cognitive-reasoning.asd
cognitive_reasoning/src/: #environment-objects.lisp#  #package.lisp#  cost-functions.lisp  costmap-knowledge.lisp  environment-objects.lisp  environment-objects.lisp~  package.lisp  package.lisp~  perception.lisp  prolog.lisp  prolog.lisp~  robot-model-facts.lisp  robot-model-facts.lisp~  robot-model-utils.lisp  test-world.lisp
pr2_reasoning/: CMakeLists.txt  package.xml
pr2_reasoning/launch/: scenario.launch
sherpa_actionlib/: CMakeLists.txt  package.xml
sherpa_actionlib/action/: traj.action  traj.action~  traj_def.action
sherpa_actionlib/include/: foo.txt
sherpa_actionlib/launch/: teleop_sherpa_human.launch
sherpa_actionlib/scripts/: #traj_yaml.py#
sherpa_actionlib/src/: #sherpa_move.cpp#  #sherpa_server.cpp#  .#sherpa_move.cpp  .#sherpa_server.cpp  sherpa_client.cpp  sherpa_client.cpp~  sherpa_move.cpp  sherpa_move.cpp~  sherpa_server.cpp  sherpa_server.cpp~  sherpa_teleop.cpp
sherpa_cad_models/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sherpa_cad_models/models/agents/: Body_Full.dae  quadrotor2.dae
sherpa_cad_models/models/environment-related/: stone0.dae  tanne1.dae  tree-3.dae  (+3 more)
sherpa_cad_models/owl/: sherpa_cad_models.owl
sherpa_cad_models/prolog/: init.pl  init.pl~
sherpa_html/: index.html  queriesForSherpa.json  sherpa.html
sherpa_project/: CMakeLists.txt  package.xml
startup_scenario/: CMakeLists.txt  create_owl_from_location_csv  mainpage.dox  manifest.xml  package.xml  point.owl  pointing_log2.owl  startup-scenario.asd  startup-scenario.asd~
startup_scenario/asdf/: startup-scenario.asd
startup_scenario/launch/: human.launch  scenario.launch  spawn_quadrotor.launch  spawn_quadrotor.launch~  world.launch  world.launch~
startup_scenario/src/: auxiliaries.lisp  calculation.lisp  calculation.lisp~  knowledge-base.lisp  package.lisp  ros-interactor.lisp  start-scenario.lisp  start-scenario.lisp~  utils.lisp
world_model_description/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
world_model_description/defs/: #area.urdf.xml#  #tree_2.xml#  area.urdf.xml  area.xml~  output  tree_1.xml  tree_1.xml~  tree_10.xml  tree_11.xml  tree_12.xml  tree_13.xml  tree_14.xml  tree_15.xml  tree_16.xml  tree_17.xml  tree_18.xml  tree_19.xml  tree_2.xml  tree_2.xml~  tree_20.xml  tree_3.xml  tree_3.xml~  tree_4.xml  tree_4.xml~  tree_5.xml  tree_5.xml~  tree_6.xml  tree_6.xml~  tree_7.xml  tree_7.xml~  tree_8.xml  tree_9.xml  victim_1.xml
world_model_description/launch/: area_with_state_publisher.launch  json.launch  sherpa_map.launch
world_model_description/meshes/: Tent1.dae  Tent1.stl  Tent2.dae  berg1.dae  berg2.dae  cone.dae  cone.stl  hat.dae  hat.stl  map.dae  map.stl  operator.dae  sphere.dae  sphere.stl  tanne1.stl  tanne2.dae  tanne2.stl  tree-1.dae  tree-1.stl  tree-2.stl  tree-3.stl  tree-4.stl  tree-5.stl  tree-6.stl  tree2.stl  victim.stl
world_model_description/owl/: scenario.owl  sem_map2.owl  semantic_map.owl  semantic_map01.owl  semantic_map1.owl~  sherpa_galtelli.owl  trees.owl
world_model_description/urdf/: human.urdf  human.urdf~  sphere.urdf  tanne1.urdf  tanne12.urdf  tanne2.urdf  tanne21.urdf  victim.urdf
world_model_description/world/: world_map.world
(+33 files in other folders)
