<?xml version="1.0"?>
<package>
  <name>alpine_scenario</name>
  <version>0.0.0</version>
  <description>The alpine_scenario package</description>
  <maintainer email="yazdani@cs.uni-bremen.de">Fereshta Yazdani</maintainer>
  <license>BSD</license>
 <!-- <review status="unreviewed" notes=""/>--> <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/beginner_tutorials</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
   <build_depend>roscpp</build_depend> 
  <build_depend>actionlib</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl</build_depend>
   <build_depend>pr2_description</build_depend>
 <build_depend>control_msgs</build_depend>

  <!-- <build_depend>octomap</build_depend>
   <run_depend>octomap</run_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>pr2_description</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>pcl</run_depend> 
   <run_depend>pcl_ros</run_depend>
  
<!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <url type="website">http://ros.org/wiki/alpine_scenario</url>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pcl</buildtool_depend>
  <buildtool_depend>pcl_ros</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend> 
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>gazebo_msgs</buildtool_depend> 
  <buildtool_depend>geometry_msgs</buildtool_depend> 
  <buildtool_depend>cram_language</buildtool_depend>
  <buildtool_depend>roslisp</buildtool_depend> 
  <buildtool_depend>cram_pr2_knowledge</buildtool_depend> 
  <buildtool_depend>cram_plan_library</buildtool_depend> 
  <buildtool_depend>cram_plan_knowledge</buildtool_depend> 
  <buildtool_depend>cram_reasoning</buildtool_depend>
  <buildtool_depend>cram_physics_utils</buildtool_depend>
  <buildtool_depend>cram_gazebo_utilities</buildtool_depend> 
  <buildtool_depend>gazebo</buildtool_depend> 
  <buildtool_depend>octomap_server</buildtool_depend>
  <buildtool_depend>actionlib</buildtool_depend>
 <buildtool_depend>control_msgs</buildtool_depend>
  <!--<buildtool_depend>semantic_map_costmap</buildtool_depend> 
  <buildtool_depend>cl_transforms</buildtool_depend>-->
 
  <export>   <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->


    <gazebo gazebo_media_path="${prefix}/models" />
  </export>

</package>


