<?xml version="1.0"?>
<package>
  <name>startup_scenario</name>
  <version>0.0.0</version>
  <description>The startup_scenario package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yazdani@todo.todo">yazdani</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/startup_scenario</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>agents_navigation_process_module</build_depend>
  <!-- <build_depend>agents_projection_process_module</build_depend> -->
  <build_depend>bullet_reasoning</build_depend>
  <build_depend>bullet_reasoning_designators</build_depend>
  <build_depend>cl_bullet</build_depend>
  <build_depend>cl_bullet_vis</build_depend>
  <build_depend>cl_tf</build_depend>
  <build_depend>cl_urdf</build_depend>
  <build_depend>cognitive_reasoning</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <!-- <build_depend>cram_agents_knowledge</build_depend> -->
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_environment_representation</build_depend>
  <!-- <build_depend>cram_gazebo_utilities</build_depend> -->
  <build_depend>cram_json_prolog</build_depend>
  <build_depend>cram_language</build_depend>
  <build_depend>designator_integration_lisp</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <!-- <build_depend>gazebo_perception_process_module</build_depend> -->
  <build_depend>geometry_msgs</build_depend>
  
  <build_depend>language_interpreter</build_depend>
  <build_depend>object_location_designators</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>semantic_map_costmap</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>simple_knowledge</build_depend> -->
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>agents_navigation_process_module</run_depend>
  <!-- <run_depend>agents_projection_process_module</run_depend> -->
  <run_depend>bullet_reasoning</run_depend>
  <run_depend>bullet_reasoning_designators</run_depend>
  <run_depend>cl_bullet</run_depend>
  <run_depend>cl_bullet_vis</run_depend>
  <run_depend>cl_tf</run_depend>
  <run_depend>cl_urdf</run_depend>
  <run_depend>cognitive_reasoning</run_depend>
  <run_depend>control_msgs</run_depend>
  <!-- <run_depend>cram_agents_knowledge</run_depend> -->
  <run_depend>cram_designators</run_depend>
  <run_depend>cram_environment_representation</run_depend>
  <!-- <run_depend>cram_gazebo_utilities</run_depend> -->
  <run_depend>cram_json_prolog</run_depend>
  <run_depend>cram_language</run_depend>
  <run_depend>designator_integration_lisp</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <!-- <run_depend>gazebo_perception_process_module</run_depend> -->
  <run_depend>geometry_msgs</run_depend>

  <run_depend>language_interpreter</run_depend>
  <run_depend>object_location_designators</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>semantic_map_costmap</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <!-- <run_depend>simple_knowledge</run_depend> -->
  <run_depend>trajectory_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
